--- a/requirements.txt
+++ b/requirements.txt
@@ -1,52 +1,14 @@
-﻿anyio==3.6.2
-asttokens==2.0.5
-backcall==0.2.0
+anyio==3.6.2
 certifi==2022.9.24
+charset-normalizer==2.1.1
 click==8.1.3
-colorama==0.4.6
-debugpy==1.5.1
-decorator==5.1.1
-entrypoints==0.4
-executing==0.8.3
-fastapi==0.85.2
+fastapi==0.86.0
 h11==0.14.0
 idna==3.4
-ipykernel==6.15.2
-ipython==8.4.0
-ipython-genutils==0.2.0
-jedi==0.18.1
-jupyter_client==7.3.5
-jupyter_core==4.11.1
-matplotlib-inline==0.1.6
-nest-asyncio==1.5.5
-packaging==21.3
-parso==0.8.3
-pickleshare==0.7.5
-pip==22.2.2
-ply==3.11
-prompt-toolkit==3.0.20
-psutil==5.9.0
-pure-eval==0.2.2
 pydantic==1.10.2
-Pygments==2.11.2
-pyparsing==3.0.9
-PyQt5==5.15.7
-PyQt5-sip==12.11.0
-python-dateutil==2.8.2
-pyzmq==23.2.0
-qtconsole==5.3.2
-QtPy==2.2.0
-setuptools==65.5.0
-sip==6.6.2
-six==1.16.0
+requests==2.28.1
 sniffio==1.3.0
-stack-data==0.2.0
 starlette==0.20.4
-toml==0.10.2
-tornado==6.2
-traitlets==5.1.1
-typing_extensions==4.4.0
+typing-extensions==4.4.0
+urllib3==1.26.12
 uvicorn==0.19.0
-wcwidth==0.2.5
-wheel==0.37.1
-wincertstore==0.2
